@@ -83,20 +83,20 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <configuration>
                     <skip>false</skip>
-                    <doclet>ch.raffael.doclets.pegdown.PegdownDoclet</doclet>
+                    <doclet>org.jdrupes.mdoclet.MDoclet</doclet>
                     <docletArtifact>
-                        <groupId>ch.raffael.pegdown-doclet</groupId>
-                        <artifactId>pegdown-doclet</artifactId>
-                        <version>1.1</version>
+                        <groupId>org.jdrupes.mdoclet</groupId>
+                        <artifactId>doclet</artifactId>
+                        <version>2.0.0</version>
                     </docletArtifact>
-                    <useStandardDocletOptions>true</useStandardDocletOptions>
+                    <additionalJOption>-J--add-exports=jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED</additionalJOption>
                 </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
         </plugins>
